# player

./: .gitignore  Cargo.toml  README.md
crates/player/: Cargo.toml
crates/player/src/: lib.rs  library.rs  main.rs  storage.rs
crates/player/tests/: import_tests.rs
crates/player/tests/fixtures/: mod.rs
crates/player_core/: Cargo.toml
crates/player_core/src/: audio.rs  audio_player.rs  import.rs  lib.rs  library.rs  media_controls.rs  playback.rs  storage.rs
crates/player_core/tests/: import_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/ui/: list_view.rs  mod.rs
