[workspace]
members = ["crates/player"]
default-members = ["crates/player"]
resolver = "2"

[workspace.dependencies]
player = { path = "crates/player" }

gpui = { git = "https://github.com/zed-industries/zed" }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
