[workspace]
members = ["crates/player", "crates/player_core", "crates/ui"]
default-members = ["crates/player"]
resolver = "2"

[workspace.dependencies]
player_core = { path = "crates/player_core" }
ui = { path = "crates/ui" }

gpui = "0.2.2"
gpuikit = { path = "../gpuikit/crates/gpuikit" }
gpuikit-theme = { path = "../gpuikit/crates/gpuikit-theme" }
