[workspace]
members = ["crates/player", "crates/player_core", "crates/ui"]
default-members = ["crates/player"]
resolver = "2"

[workspace.dependencies]
player_core = { path = "crates/player_core" }
ui = { path = "crates/ui" }

gpui = { package = "gpui-ce", version = "*" }
gpuikit = { git = "https://github.com/iamnbutler/gpuikit", branch = "gpui-ce" }
