[package]
name = "player"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "player"
path = "src/main.rs"

[dependencies]
player_core.workspace = true
ui.workspace = true
gpui.workspace = true
gpuikit = { path = "../../../gpuikit/crates/gpuikit" }
gpuikit-theme = { path = "../../../gpuikit/crates/gpuikit-theme" }
